fail_crate/tests/const_and_default.stderr
error: Parameterless `default` cannot be used in constant constructors.
 --> fail_crate/tests/const_and_default.rs:6:11
  |
6 |     #[new(default)]
  |           ^^^^^^^
